--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -1,21 +1,65 @@
 /*******************************************************************************
 ******************************* COLOUR VARIABLES *******************************
 *******************************************************************************/
-$primary: #231F20;
+$color-BFA8E5: #bfa8e5;
+$color-30264B: #30264b;
+$color-F7F5F6: #f7f5f6;
+$color-0E3823: #0e3823;
+$color-B6EDC6: #b6edc6;
+$color-E5E5E5: #e5e5e5;
+$color-707070: #707070;
+$color-FFFCF0: #FFFCF0;
+$color-E9E9F0: #E9E9F0;
 
 /*******************************************************************************
 ******************************* FONTS VARIABLES *******************************
 *******************************************************************************/
-$fontX: 12px;
+$font12: 12px;
+$font14: 14px;
+$font16: 16px;
+$font17: 17px;
+$font18: 18px;
+$font20: 20px;
+$font30: 30px;
+$font36: 36px;
+$font38: 38px;
+$font40: 40px;
+$font42: 42px;
+$font46: 46px;
+$font48: 48px;
+$font50: 50px;
+$font52: 52px;
+$font61: 61px;
+$font72: 72px;
+$font100: 100px;
 
 /*******************************************************************************
 ******************************* LINE HEIGHT *******************************
 *******************************************************************************/
-$smallLeading: 24px;
+$leading16: 16px;
+$leading18: 18px;
+$leading20: 20px;
+$leading26: 26px;
+$leading28: 28px;
+$leading35: 35px;
+$leading40: 40px;
+$leading46: 46px;
+$leading50: 50px;
+$leading55: 55px;
+$leading60: 60px;
+$leading70: 70px;
+$leading115: 115px;
 /*******************************************************************************
 ******************************* LETTER SPACING *******************************
 *******************************************************************************/
-$spaceX: 1.2px;
+// $spaceX: 1.2px;
+/*******************************************************************************
+******************************* BORDER RADIUS *******************************
+*******************************************************************************/
+$radius5: 5px;
+$radius10: 10px;
+$radius15: 15px;
+$radius20: 20px;
 
 /*******************************************************************************
 ******************************* ANIMATION VARIABLES ****************************
